--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
 - '3.7'
 - '3.8'
 - '3.9'
-install: pip install -r requirements.txt
+install: pip install -r requirements.txt -r test-requirements.txt
 script: nosetests
 env:
   global:
